# SimpleSfM

./: CMakeLists.txt  camera.h  dataset.py  epipolar.cxx  epipolar.h  essential_matrix.py  features.py  features2d.cxx  features2d.h  frame.cxx  frame.h  io.cxx  io.h  main.cxx  main.py  map.h  matching.cxx  matching.h  matching.py  optimize.cxx  optimize.h  point3d.h  triangulation.cxx  triangulation.h  utils.h
python/: features.py  matching.py  parallel.py  tracking.py
